# vsg-wgpu

./: Cargo.toml  LICENSE  README.md
client_sample/: update_bg_color.py  update_shape.py
src/: circle.wgsl  main.rs  messages.rs  sample.tif  shader.wgsl  shader_with_texture.wgsl  shapes.rs  sn2_cd1_rnl_gray.tif  texture.rs  vertex.rs
src/graphics/: triangle.rs
src/renderers/: circle.rs  cross.rs  mod.rs  picture.rs  rectangle.rs  sn10_cd1_rnl_gray.tif
src/shaders/: shader_with_texture.wgsl  triangle.wgsl
vsg-core/: Cargo.toml
vsg-core/src/: main.rs  messages.rs  texture.rs
vsg-core/src/graphics/: mod.rs
vsg-core/src/renderers/: circle.rs  cross.rs  image.rs  mod.rs  rectangle.rs  scene.rs  triangle.rs
vsg-core/src/shaders/: shader_with_texture.wgsl  triangle.wgsl
vsg-messages/: generate-java.ps1
vsg-messages/proto/: message.proto  shapes.proto
vsg-messages/python/: main.py  message_pb2.py  requirements.txt  shapes_pb2.py
vsg-messages/rust/: Cargo.toml  build.rs
vsg-messages/rust/src/: lib.rs
vsg-messages/rust/src/proto/: mod.rs  vsg.rs
vsg-messages/vsg-messages-java/: pom.xml
vsg-messages/vsg-messages-java/src/main/java/vsg/: BgColor.java  BgColorOrBuilder.java  Circle.java  CircleOrBuilder.java  Coordinates.java  CoordinatesOrBuilder.java  Cross.java  CrossOrBuilder.java  RootMessage.java  RootMessageOrBuilder.java  SetMessage.java  SetMessageOrBuilder.java  Shape.java  ShapeOrBuilder.java  Square.java  SquareOrBuilder.java  Texture.java  TextureOrBuilder.java  Vsg.java
vsg-messages/vsg-messages-java/src/main/java/vsg/shapes/: Circle.java  CircleOrBuilder.java  Coordinates.java  CoordinatesOrBuilder.java  Cross.java  CrossOrBuilder.java  Shape.java  ShapeOrBuilder.java  Square.java  SquareOrBuilder.java  VsgShapes.java
