[package]
name = "vsg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version="1.4", features = ["derive"] }
anyhow = "1.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.14", features = ["derive"] }

bytes = "1.1.0"
prost = "0.9.0"
vsg-messages = { path = "../vsg-messages/rust" }
imgui = "0.8"
imgui-wgpu = "0.19"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }

[dependencies.image_rs]
version = "0.23"
package = "image"