[package]
name = "vsg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.7"
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version="1.14", features = ["derive"] }
anyhow = "1.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

bytes = { workspace = true }
prost = { workspace = true }
vsg-messages = { path = "../vsg-messages/rust" }

[dependencies.image_rs]
version = "0.24"
package = "image"